<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="catalogueViewModel"
            type="com.bizarrecoding.sm4sh.screens.catalogue.CatalogueViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp"
        tools:context=".screens.catalogue.CatalogueFragment">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/games"
            android:textSize="22sp"
            app:autoSizeTextType="none"
            app:layout_constraintEnd_toStartOf="@+id/filters"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Games" />

        <ImageButton
            android:id="@+id/filters"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/FilterDesc"
            app:layout_constraintBottom_toBottomOf="@+id/title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/title"
            app:srcCompat="@android:drawable/ic_menu_sort_by_size" />

        <RadioGroup
            android:id="@+id/brandGroup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@+id/nestedScrollView"
            app:layout_constraintStart_toStartOf="@+id/nestedScrollView"
            app:layout_constraintTop_toBottomOf="@+id/title">
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/brandList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:itemCount="5"
                tools:listitem="@layout/brand_item" />
        </RadioGroup>

        <!--androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout-->
        <androidx.core.widget.NestedScrollView
            android:id="@+id/nestedScrollView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:fillViewport="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/brandGroup">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/FrameNew"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/newLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:text="@string/newLabel"
                        android:textSize="22sp"
                        tools:text="New (0)" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="2dp"
                        android:layout_gravity="center"
                        android:layout_marginStart="16dp"
                        android:layout_weight="1"
                        android:background="@android:drawable/divider_horizontal_bright" />

                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/newGrid"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:itemCount="5"
                    tools:listitem="@layout/new_product_item" />

                <LinearLayout
                    android:id="@+id/FramePopular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/popularLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:text="@string/popular_format"
                        android:textSize="22sp"
                        tools:text="Popular (0)" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="2dp"
                        android:layout_gravity="center"
                        android:layout_marginStart="16dp"
                        android:layout_weight="1"
                        android:background="@android:drawable/divider_horizontal_bright" />

                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/popularGrid"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:itemCount="5"
                    tools:listitem="@layout/new_product_item" />

                <LinearLayout
                    android:id="@+id/FrameAll"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/allLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:text="@string/total_format"
                        android:textSize="22sp"
                        tools:text="All (0)" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="2dp"
                        android:layout_gravity="center"
                        android:layout_marginStart="16dp"
                        android:layout_weight="1"
                        android:background="@android:drawable/divider_horizontal_bright" />

                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/productsGrid"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                    app:spanCount="2"
                    tools:itemCount="16"
                    tools:listitem="@layout/product_item" />

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>