<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:theme="@style/AppTheme.Preferences"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.preferences.PreferencesFragment">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/backBtn"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="@android:color/transparent"
                android:scaleType="fitXY"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="?attr/actionModeCloseDrawable" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/filters"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@android:color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
        <RadioGroup
            android:id="@+id/orderFilter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="4dp"
            android:background="@android:color/white"
            android:orientation="vertical"
            android:paddingHorizontal="10dp"
            android:paddingVertical="4dp">

            <RadioButton
                android:id="@+id/orderDownloads"
                style="@style/Widget.AppCompat.CompoundButton.RadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layoutDirection="rtl"
                android:text="@string/downloads" />

            <RadioButton
                android:id="@+id/orderDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layoutDirection="rtl"
                android:text="@string/date_added" />

            <RadioButton
                android:id="@+id/orderPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layoutDirection="rtl"
                android:text="@string/price" />
        </RadioGroup>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:layout_marginVertical="4dp"
            android:paddingHorizontal="10dp"
            android:paddingVertical="4dp">
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp">
                <TextView
                    android:id="@+id/minLabel"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    tools:text="$9.99"/>
                <TextView
                    android:id="@+id/maxLabel"
                    android:layout_weight="1"
                    android:textAlignment="textEnd"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    tools:text="$99.99"/>
            </LinearLayout>
            <SeekBar
                android:id="@+id/priceRange"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:layout_marginVertical="4dp"
            android:paddingHorizontal="10dp"
            android:paddingVertical="4dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RatingBar
                    android:id="@+id/rating5"
                    style="@android:style/Widget.DeviceDefault.Light.RatingBar.Indicator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:isIndicator="true"
                    android:max="5"
                    android:progress="5"
                    android:rating="5" />

                <CheckBox
                    android:id="@+id/rated5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layoutDirection="rtl" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RatingBar
                    android:id="@+id/rating4"
                    style="@android:style/Widget.DeviceDefault.Light.RatingBar.Indicator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:isIndicator="true"
                    android:max="5"
                    android:progress="4"
                    android:rating="4" />

                <CheckBox
                    android:id="@+id/rated4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layoutDirection="rtl" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="4dp">

                <RatingBar
                    android:id="@+id/rating3"
                    style="@android:style/Widget.DeviceDefault.Light.RatingBar.Indicator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:isIndicator="true"
                    android:max="5"
                    android:progress="3"
                    android:rating="3" />

                <CheckBox
                    android:id="@+id/rated3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layoutDirection="rtl" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RatingBar
                    android:id="@+id/rating2"
                    style="@android:style/Widget.DeviceDefault.Light.RatingBar.Indicator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:isIndicator="true"
                    android:max="5"
                    android:progress="2"
                    android:rating="2" />

                <CheckBox
                    android:id="@+id/rated2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layoutDirection="rtl" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RatingBar
                    android:id="@+id/rating1"
                    style="@style/Widget.AppCompat.RatingBar.Indicator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:isIndicator="true"
                    android:max="5"
                    android:progress="1"
                    android:rating="1" />

                <CheckBox
                    android:id="@+id/rated1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layoutDirection="rtl" />
            </LinearLayout>
        </LinearLayout>
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/universeList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:layout_marginVertical="4dp"
                android:paddingHorizontal="10dp"
                android:paddingVertical="4dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:itemCount="5"
                tools:listitem="@layout/brand_filter_item"/>
        </RadioGroup>
        <Button
            android:id="@+id/apply"
            android:text="@string/apply"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:backgroundTint="@color/colorAccent"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
</androidx.core.widget.NestedScrollView>