<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="product"
            type="com.bizarrecoding.sm4sh.screens.product.ProductViewModel" />
    </data>

        <ScrollView
            android:id="@+id/scrollView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".screens.product.ProductFragment"
            android:scrollbarTrackVertical="@null">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/product_cut">

                    <TextView
                        android:id="@+id/productSku"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        android:alpha="0.5"
                        android:text="@{@string/sku_format(product.product.sKU)}"
                        android:textAllCaps="true"
                        android:textColor="@android:color/primary_text_dark"
                        android:textSize="16sp"
                        app:layout_constraintStart_toStartOf="@+id/back"
                        app:layout_constraintTop_toBottomOf="@+id/back"
                        tools:text="SKU:6486849" />

                    <TextView
                        android:id="@+id/productName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{product.product.name}"
                        android:textAllCaps="true"
                        android:textColor="@android:color/primary_text_dark"
                        android:textSize="32sp"
                        app:layout_constraintStart_toStartOf="@+id/productSku"
                        app:layout_constraintTop_toBottomOf="@+id/productSku"
                        tools:text="Captain Falcon" />

                    <TextView
                        android:id="@+id/productUni"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:alpha="0.7"
                        android:text="@{product.product.universe}"
                        android:textColor="@android:color/primary_text_dark"
                        android:textSize="16sp"
                        app:layout_constraintStart_toStartOf="@+id/productName"
                        app:layout_constraintTop_toBottomOf="@+id/productName"
                        tools:text="F-Zero" />

                    <TextView
                        android:id="@+id/productKind"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:text="@{product.product.kind}"
                        android:textColor="@android:color/primary_text_dark"
                        android:textSize="16sp"
                        app:layout_constraintBottom_toBottomOf="@+id/productUni"
                        app:layout_constraintStart_toEndOf="@+id/productUni"
                        app:layout_constraintTop_toTopOf="@+id/productUni"
                        tools:text="Human" />

                    <TextView
                        android:id="@+id/downloads"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@{@plurals/number_format(product.downloads)}"
                        android:textAllCaps="false"
                        android:textColor="@android:color/primary_text_dark"
                        android:textSize="16sp"
                        app:layout_constraintStart_toStartOf="@+id/productUni"
                        app:layout_constraintTop_toBottomOf="@+id/productUni"
                        tools:text="4,343,543 downloads" />

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="5dp"
                        android:layout_height="5dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:contentDescription="@string/dot"
                        app:layout_constraintBottom_toBottomOf="@+id/productUni"
                        app:layout_constraintEnd_toStartOf="@+id/productKind"
                        app:layout_constraintHorizontal_bias="0.52"
                        app:layout_constraintStart_toEndOf="@+id/productUni"
                        app:layout_constraintTop_toTopOf="@+id/productUni"
                        app:srcCompat="@drawable/dot" />

                    <RatingBar
                        android:id="@+id/ratingBar"
                        style="@style/Widget.AppCompat.RatingBar.Indicator"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:clickable="false"
                        android:isIndicator="false"
                        android:max="5"
                        android:numStars="5"
                        android:paddingStart="0dp"
                        android:paddingEnd="0dp"
                        android:progressTint="@android:color/background_light"
                        android:rating="@{product.rating}"
                        android:scaleX="0.8"
                        android:scaleY="0.8"
                        android:secondaryProgressTint="@android:color/background_light"
                        android:transformPivotX="0dp"
                        android:transformPivotY="0dp"
                        app:layout_constraintEnd_toEndOf="@+id/downloads"
                        app:layout_constraintHorizontal_bias="0"
                        app:layout_constraintStart_toStartOf="@+id/downloads"
                        app:layout_constraintTop_toBottomOf="@+id/downloads"
                        tools:rating="1.5" />

                    <ImageButton
                        android:id="@+id/back"
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="24dp"
                        android:background="@android:color/transparent"
                        android:contentDescription="@android:string/VideoView_error_text_invalid_progressive_playback"
                        android:scaleType="fitXY"
                        android:tint="@android:color/background_light"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="?attr/actionModeCloseDrawable" />

                    <ImageButton
                        android:id="@+id/share"
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:layout_marginTop="24dp"
                        android:layout_marginEnd="16dp"
                        android:background="@android:color/transparent"
                        android:contentDescription="@string/share"
                        android:scaleType="fitXY"
                        android:tint="@android:color/background_light"
                        app:layout_constraintBottom_toBottomOf="@+id/back"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="?attr/actionModeShareDrawable" />

                    <Button
                        android:id="@+id/productPrice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="32dp"
                        android:backgroundTint="@android:color/background_light"
                        android:text="@{@string/money_format(product.product.price)}"
                        android:textColor="@color/colorAccent"
                        android:textSize="20sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="@+id/ratingBar"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="@+id/ratingBar"
                        app:layout_constraintTop_toBottomOf="@+id/ratingBar"
                        app:layout_constraintVertical_bias="0.0"
                        tools:text="$9,99" />

                    <ImageView
                        android:id="@+id/productImage"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:contentDescription="@string/product_image"
                        android:scaleType="fitCenter"
                        app:imageUrl="@{product.product.imageURL}"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintDimensionRatio=""
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.75"
                        app:layout_constraintStart_toEndOf="@+id/downloads"
                        app:layout_constraintTop_toBottomOf="@+id/productName"
                        tools:srcCompat="@tools:sample/avatars" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    android:id="@+id/productDescription"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="24dp"
                    android:lineSpacingExtra="8sp"
                    android:text="@{product.product.description}"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    android:textSize="16sp"
                    tools:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum." />
            </LinearLayout>
        </ScrollView>
</layout>